# dot-dropbox-ignore

./: .dropboxignore  .gitignore  LICENSE  README.md  TODO.md  cli.py  dev-requirements.in  folders_to_ignore.py  pyproject.toml  requirements.in  requirements.txt  scratch.py  setup.cfg  shell.py  test.py  test_suite.py
.github/workflows/: unit_tests.yml
dropboxignore/: .dropboxignore  __init__.py  __main__.py  cli.py  folders_to_ignore.py  paths_to_ignore.py  scratch.py  shell.py
tests/: test_dropboxignore.py  test_suite.py
