[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dot-dropbox-ignore"
authors = [{ name = "Ian Currie", email = "iansedano@gmail.com" }]
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]
keywords = ["dropbox", "ignore"]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.dynamic]
version = { attr = "dropboxignore.__version__" }

[project.scripts]
dbignore = "dropboxignore.cli:cli"

[project.urls]
"Source Code" = "https://github.com/iansedano/dot-dropbox-ignore"

[project.optional-dependencies]
dev = ["black", "ruff", "interrogate", "isort", "pip-tools"]
test = ["black", "ruff", "interrogate", "pytest", "pytest-cov", "tox"]

[tool.isort]
profile = "black"
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "DotDropboxIgnore imports"

[tool.interrogate]
fail-under = 60
exclude = ["dist", "tests", "build"]

[tool.tox]
legacy_tox_ini = """
[tox]
    isolated_build = true
    envlist = py, style


    [testenv]
    deps =
        pytest
        pytest-cov
    commands =
        {envpython} -m pytest --cov=dropboxignore --cov-fail-under=20 --cov-report=term-missing


    [testenv:style]
    skip_install = true
    deps = 
        black
        ruff
        interrogate
        isort
    commands = 
        {envpython} -m black --check --quiet dropboxignore/ tests/
        {envpython} -m ruff check dropboxignore/ tests/
        {envpython} -m interrogate --quiet --config=pyproject.toml
        {envpython} -m isort --check dropboxignore/ tests/
"""

[tool.ruff]
line-length = 88                                                   # Same as Black
exclude = [".git", ".ruff_cache", ".tox", "venv", "dist", "build"]
