[metadata]
name = dropboxignore
version = 0.1.0

[options]
packages = dropboxignore

[isort]
multi_line_output             = 3
profile                       = black
import_heading_stdlib         = Standard library imports
import_heading_thirdparty     = Third party imports
import_heading_firstparty     = dropboxignore imports